Final project links added - YouTube section finalised - CV download link added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <section class="page1">
     <div class="intro">
       <h1>Hi. I'm <span class="name">Sam Joyce</span>, a software developer in London.</h1>
-      <p>scroll down to see my background and projects, or click <span class="cv"><a href="cv.html">here</a></span> to
+      <p>scroll down to see my background and projects, or click <span class="cv"><a href="/images/Final CV (portfolio).jpg" download="Samuel Joyce CV">here</a></span> to
         see my cv</p>
     </div>
     <div class="arrow">
@@ -122,7 +122,7 @@
           </div>
           <h3>HTML 5</h3>
         </div>
-        <p>DRY code, clear naming conventions and correctly indented code enables me to write readable and maintainable
+        <p>'DRY', semantic HTML code, clear naming conventions and correctly indented code enables me to write readable and maintainable
           code on my project builds.</p>
       </div>
       <div class="skill-box">
@@ -153,8 +153,7 @@
           </div>
           <h3>Angular</h3>
         </div>
-        <p>I will fill this in when I understand it, I will fill this in when I understand it, I will fill this in when
-          I understand it.</p>
+        <p>I have learnt the fundamentals of the Angular framework and built components within it to undrstand the benefits/drawbacks of using it.</p>
       </div>
       <div class="skill-box">
         <div class="skill-title">
@@ -198,6 +197,7 @@
     <div id="wrapper">
       <article id="p1">
         <div class=project-boxes>
+          <h3>Pokedex</h3>
           <a href="https://github.com/sam-joyce/rock-paper-scissors"><i class="far fa-file-code"></i></a>
           <a href="https://sam-joyce.github.io/rock-paper-scissors/"><i class="fab fa-chrome"></i></a>
         </div class=project-boxes>
@@ -219,15 +219,15 @@
       <article id="p4">
         <div class=project-boxes>
           <h3>NASA API</h3>
-          <a href="*"><i class="far fa-file-code"></i></a>
-          <a href="*"><i class="fab fa-chrome"></i></a>
+          <a href="https://github.com/sam-joyce/NASA-API"><i class="far fa-file-code"></i></a>
+          <a href="https://sam-joyce.github.io/NASA-API/"><i class="fab fa-chrome"></i></a>
         </div>
       </article>
       <article id="p5">
         <div class=project-boxes class="box5">
           <h3>The Drop</h3>
-          <a href="*"><i class="far fa-file-code"></i></a>
-          <a href="*"><i class="fab fa-chrome"></i></a>
+          <a href="https://github.com/nology-tech/the-drop-x-nology"><i class="far fa-file-code"></i></a>
+          <a href="https://the-drop-x-nology.firebaseapp.com/"><i class="fab fa-chrome"></i></a>
         </div>
       </article>
       <article id="p6">
@@ -248,24 +248,24 @@
 
     <div class="box-around">
       <div class="item">
-        <video src=""></video>
-        <h4>Video 1</h4>
-        <p>Decription of video</p>
+        <a href=""><i class="fab fa-youtube"></i></a>
+        <h4>Week 1</h4>
+        <p>In the first week of the course we learn about using GitHub, git, HTML and CSS.</p>
       </div>
       <div class="item">
-        <video src=""></video>
-        <h4>Video 2</h4>
-        <p>Decription of video</p>
+        <a href=""><i class="fab fa-youtube"></i></a>
+        <h4>Week 2</h4>
+        <p>We learnt about CSS best preactice, flex and grid as well as SCSS for cleaner styling.</p>
       </div>
       <div class="item">
-        <video src=""></video>
-        <h4>Video 3</h4>
-        <p>Decription of video</p>
+        <a href=""><i class="fab fa-youtube"></i></a>
+        <h4>Week 3</h4>
+        <p>We were introduced to Javascript and began working with 'ifs' and 'loops'.</p>
       </div>
       <div class="item">
-        <video src=""></video>
-        <h4>Video 4</h4>
-        <p>Decription of video</p>
+        <a href=""><i class="fab fa-youtube"></i></a>
+        <h4>Week 4</h4>
+        <p>This week we had a break from coding and learnt all about soft skills.</p>
       </div>
     </div>
 
@@ -280,15 +280,6 @@
     <div class="email-link">
       <a href="mailto:samjoyce18@yahoo.com"><i class="far fa-envelope"></i></a>
     </div>
-
-    <!-- <form action="https://webhook.site/d8dd0323-29bc-4d68-a3fd-69ce9e76fe17" class="form-cont">
-      <section class="details">
-        <input type="text" name="name" id="" placeholder="Name" required>
-        <input type="email" name="email" id="" placeholder="Enter Email" required>
-        <input type="text" name="message" id="message" placeholder="Your Message" required>
-        <button class="submit" type="submit">Submit</button>
-      </section>
-    </form> -->
 
   </section>
 
