_nology logo link updated

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="experience">
       <div class="_nology">
         <div class="img-experience">
-          <img src="./images/_nology.jpg" alt="A picture of the _nology logo">
+          <img src="/images/_nology.jpg" alt="A picture of the _nology logo">
         </div>
         <h3>_nology</h3>
         <p>I have completed a 12 week bootcamp with _nology, the UK's fastest growing bootcamp. During the course I
@@ -182,17 +182,6 @@
     <div class="project-title">
       <h1>Projects</h1>
     </div>
-
-    <!-- <nav>
-      <div>
-        <ul id="project-nav">
-          <a href="*">All</a>
-          <a href="*">HTML/CSS</a>
-          <a href="*">JavaScript</a>
-          <a href="*">React-JS</a>
-        </ul>
-      </div>
-    </nav> -->
 
     <div id="wrapper">
       <article id="p1">
