changed image path

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <h1 id="about-me">About</h1>
 
     <div class="experience">
-      <div class="_nology">
+      <div class="nology">
         <div class="img-experience">
           <img src="./images/_nology.jpg" alt="A picture of the _nology logo">
         </div>
