changed image path

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
     <h1 id="about-me">About</h1>
 
     <div class="experience">
-      <div class="nology">
+      <div class="_nology">
         <div class="img-experience">
-          <img src="./images/_nology.jpg" alt="A picture of the _nology logo">
+          <img src="./images/_nology.jpg.png" alt="A picture of the _nology logo">
         </div>
         <h3>_nology</h3>
         <p>I have completed a 12 week bootcamp with _nology, the UK's fastest growing bootcamp. During the course I
