changed image path

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="experience">
       <div class="_nology">
         <div class="img-experience">
-          <img src="./images/_nology.jpg.png" alt="A picture of the _nology logo">
+          <img src="./images/_nology.png" alt="A picture of the _nology logo">
         </div>
         <h3>_nology</h3>
         <p>I have completed a 12 week bootcamp with _nology, the UK's fastest growing bootcamp. During the course I
