--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           </div>
           <h3>React</h3>
         </div>
-        <p>I have worked on multiple projects using the React framwork, using professional folder structure and
+        <p>I have worked on multiple projects using the React framework, using professional folder structure and
           component based development to create modern single-page-applications.</p>
       </div>
       <div class="skill-box">
