blue links updated back to white

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           </div>
           <h3>Node JS</h3>
         </div>
-        <p>I have gained an understanding of the server side, using Node.js to build an api to route and get data which
+        <p>I have gained an understanding of the server side, using Node.js to build an API to route and get data which
           is then dispalyed on the front-end.</p>
       </div>
     </div>
