greeting re-done - project section completely revamped & responsiveness - YT section slightly changed - target=blank added to all project links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!--  LANDING PAGE -->
   <section class="page1">
     <div class="intro">
-      <h1>Hi. I'm <span class="name">Sam Joyce</span>, a software developer in London.</h1>
+      <h1>Sam Joyce <span class="seperator">|</span> Software Developer <span class="seperator">|</span> London</h1>
       <p>scroll down to see my background and projects, or click <span class="cv"><a href="/images/Final CV (portfolio).jpg" download="Samuel Joyce CV">here</a></span> to
         see my cv</p>
     </div>
@@ -93,7 +93,7 @@
           <img src="./images/pwc.png" alt="A picture of the PwC logo">
         </div>
         <h3>PwC</h3>
-        <p>I worked at PwC for 2.5 years. During this time I held client meetings, prepared UK tax returns for both
+        <p>I worked at PwC for nearly 3 years. During this time I held client meetings, prepared UK tax returns for both
           private clients and internationally mobile employees. I also worked as part of the Data Mangement team, using
           the Alteryx software in order to create custom workflows for various client teams. As well as this I
           personally led the developemnt of the Exari covering letter, a letter sent out to clients. I did the backend
@@ -187,43 +187,56 @@
       <article id="p1">
         <div class=project-boxes>
           <h3>Pokedex</h3>
-          <a href="https://github.com/sam-joyce/rock-paper-scissors"><i class="far fa-file-code"></i></a>
-          <a href="https://sam-joyce.github.io/rock-paper-scissors/"><i class="fab fa-chrome"></i></a>
+          <p>This project was produced in week 7 of the nology course and pulls data from firestore (firebase databse). The user can type input and matching pokemon are returned.</p>
+          <p>HTML | CSS/SCSS | JavaScript | React | Firebase | Search Functionality</p>
+          <a href="https://github.com/sam-joyce/pokemon" target="_blank"><i class="far fa-file-code"></i></a>
+          <a href="https://sam-joyce.github.io/pokemon/" target="_blank"><i class="fab fa-chrome"></i></a>
         </div class=project-boxes>
       </article>
       <article id="p2">
         <div class=project-boxes>
-          <h3>Personal Project</h3>
-          <a href="*"><i class="far fa-file-code"></i></a>
-          <a href="*"><i class="fab fa-chrome"></i></a>
+          <h3>Personal Client Project</h3>
+          <p>This project was completed after the conclusion of the nology course and is ongoing. It is a complete production build for a local SME. I managed the build on my own and delivered weekly demo's up until delivery.</p>
+          <p>The repo is private on GitHub however I would be happy to talk about this project in more detail upon request!</p>
+          <p>HTML | CSS/SCSS | JavaScript | React | Firestore | NodeJS | CMS Integration</p>
+          <a href="https://github.com/sam-joyce/oss" target="_blank><i class="far fa-file-code"></i></a>
+          <a href="https://offshore-stainless.firebaseapp.com" target="_blank><i class="fab fa-chrome"></i></a>
         </div>
       </article>
       <article id="p3">
         <div class=project-boxes>
           <h3>Minesweeper</h3>
-          <a href="https://github.com/sam-joyce/minesweeper"><i class="far fa-file-code"></i></a>
-          <a href="https://sam-joyce.github.io/minesweeper/"><i class="fab fa-chrome"></i></a>
+          <p>Comleted in week 5 of the nology course after I was challenged to complete a game of my choosing with my new found JavaScript skills. The board is dynamically rendered using a JS function, and bombs are randomly assigned across the board. A recursive function checks cells surrounding the users 'click'.</p>
+          <p>HTML | CSS/SCSS | JavaScript</p>
+          <a href="https://github.com/sam-joyce/minesweeper" target="_blank><i class="far fa-file-code"></i></a>
+          <a href="https://sam-joyce.github.io/minesweeper/" target="_blank><i class="fab fa-chrome"></i></a>
         </div>
       </article>
       <article id="p4">
         <div class=project-boxes>
           <h3>NASA API</h3>
-          <a href="https://github.com/sam-joyce/NASA-API"><i class="far fa-file-code"></i></a>
-          <a href="https://sam-joyce.github.io/NASA-API/"><i class="fab fa-chrome"></i></a>
+          <p>A relatively small app created in Week 11 of the nology course. Pulling from 'Insight: Mars Weather Service API' it display the min and max temperatures for the last 7 days on Mars.</p>
+          <p>HTML | CSS/SCSS | JavaScript | API's</p>
+          <a href="https://github.com/sam-joyce/NASA-API" target="_blank><i class="far fa-file-code"></i></a>
+          <a href="https://sam-joyce.github.io/NASA-API/" target="_blank><i class="fab fa-chrome"></i></a>
         </div>
       </article>
       <article id="p5">
         <div class=project-boxes class="box5">
           <h3>The Drop</h3>
-          <a href="https://github.com/nology-tech/the-drop-x-nology"><i class="far fa-file-code"></i></a>
-          <a href="https://the-drop-x-nology.firebaseapp.com/"><i class="fab fa-chrome"></i></a>
+          <p>Completed from weeks 6-10 of the nology course ths was my cohorts client project. I was the project manager for 1 f the 4 weeks and completed tickets including user-authentication and drafting a new artist release.</p>
+          <p>HTML | CSS/SCSS | JavaScript | React | Working in a team | Project Management/Planning | Agile | API's | Firestore | TDD</p>
+          <a href="https://github.com/nology-tech/the-drop-x-nology" target="_blank><i class="far fa-file-code"></i></a>
+          <a href="https://the-drop-x-nology.firebaseapp.com/" target="_blank><i class="fab fa-chrome"></i></a>
         </div>
       </article>
       <article id="p6">
         <div class=project-boxes>
-          <h3>Rock. Paper. Scissors</h3>
-          <a href="https://github.com/sam-joyce/rock-paper-scissors"><i class="far fa-file-code"></i></a>
-          <a href="https://sam-joyce.github.io/rock-paper-scissors/"><i class="fab fa-chrome"></i></a>
+          <h3>Rock Paper Scissors</h3>
+          <p>Produced in week 3 of the nology course, this is the first game built in JavaScript ad allows the user to play against a computer whose choice is decided using a randomising JS function.</p>
+          <p>HTML | CSS/SCSS | JavaScript</p>
+          <a href="https://github.com/sam-joyce/rock-paper-scissors" target="_blank><i class="far fa-file-code"></i></a>
+          <a href="https://sam-joyce.github.io/rock-paper-scissors/" target="_blank><i class="fab fa-chrome"></i></a>
         </div>
       </article>
     </div>
@@ -234,6 +247,7 @@
     <div class="YT-title">
       <h1>YouTube</h1>
     </div>
+    <p id="YT-intro">I completed a series of YouTube videos documenting my journey to becoming a developer in 12 weeks, which can be found below...</p>
 
     <div class="box-around">
       <div class="item">
