--- a/index.html
+++ b/index.html
@@ -251,22 +251,22 @@
 
     <div class="box-around">
       <div class="item">
-        <a href=""><i class="fab fa-youtube"></i></a>
+        <a href="" target="_blank><i class="fab fa-youtube"></i></a>
         <h4>Week 1</h4>
         <p>In the first week of the course we learn about using GitHub, git, HTML and CSS.</p>
       </div>
       <div class="item">
-        <a href=""><i class="fab fa-youtube"></i></a>
+        <a href="" target="_blank><i class="fab fa-youtube"></i></a>
         <h4>Week 2</h4>
         <p>We learnt about CSS best preactice, flex and grid as well as SCSS for cleaner styling.</p>
       </div>
       <div class="item">
-        <a href=""><i class="fab fa-youtube"></i></a>
+        <a href="" target="_blank><i class="fab fa-youtube"></i></a>
         <h4>Week 3</h4>
         <p>We were introduced to Javascript and began working with 'ifs' and 'loops'.</p>
       </div>
       <div class="item">
-        <a href=""><i class="fab fa-youtube"></i></a>
+        <a href="" target="_blank><i class="fab fa-youtube"></i></a>
         <h4>Week 4</h4>
         <p>This week we had a break from coding and learnt all about soft skills.</p>
       </div>
@@ -288,11 +288,11 @@
 
   <footer>
     <section class="socials">
-      <a href="linkedin.com/in/sam-joyce-att"><i class="fab fa-linkedin-in"></i></a>
-      <a href="https://github.com/sam-joyce"><i class="fab fa-github"></i></a>
-      <a href="https://www.youtube.com/channel/UCe0A51Cg9em64q4k_6NzdcQ?view_as=subscriber"><i
+      <a href="linkedin.com/in/sam-joyce-att" target="_blank><i class="fab fa-linkedin-in"></i></a>
+      <a href="https://github.com/sam-joyce" target="_blank><i class="fab fa-github"></i></a>
+      <a href="https://www.youtube.com/channel/UCe0A51Cg9em64q4k_6NzdcQ?view_as=subscriber" target="_blank><i
           class="fab fa-youtube"></i></a>
-      <a href="https://www.instagram.com/sam_ozanam/?hl=en"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.instagram.com/sam_ozanam/?hl=en"><i class="fab fa-instagram" target="_blank></i></a>
     </section>
   </footer>
 
