target=blank's fixed - all i tags now showing again

--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@
     </div>
   </div>
 
+  <!-- MY PROJECTS -->
+
   <section class="projects">
     <div class="project-title">
       <h1>Projects</h1>
@@ -199,8 +201,8 @@
           <p>This project was completed after the conclusion of the nology course and is ongoing. It is a complete production build for a local SME. I managed the build on my own and delivered weekly demo's up until delivery.</p>
           <p>The repo is private on GitHub however I would be happy to talk about this project in more detail upon request!</p>
           <p>HTML | CSS/SCSS | JavaScript | React | Firestore | NodeJS | CMS Integration</p>
-          <a href="https://github.com/sam-joyce/oss" target="_blank><i class="far fa-file-code"></i></a>
-          <a href="https://offshore-stainless.firebaseapp.com" target="_blank><i class="fab fa-chrome"></i></a>
+          <a href="https://github.com/sam-joyce/oss" target="_blank"><i class="far fa-file-code"></i></a>
+          <a href="https://offshore-stainless.firebaseapp.com" target="_blank"><i class="fab fa-chrome"></i></a>
         </div>
       </article>
       <article id="p3">
@@ -208,8 +210,8 @@
           <h3>Minesweeper</h3>
           <p>Comleted in week 5 of the nology course after I was challenged to complete a game of my choosing with my new found JavaScript skills. The board is dynamically rendered using a JS function, and bombs are randomly assigned across the board. A recursive function checks cells surrounding the users 'click'.</p>
           <p>HTML | CSS/SCSS | JavaScript</p>
-          <a href="https://github.com/sam-joyce/minesweeper" target="_blank><i class="far fa-file-code"></i></a>
-          <a href="https://sam-joyce.github.io/minesweeper/" target="_blank><i class="fab fa-chrome"></i></a>
+          <a href="https://github.com/sam-joyce/minesweeper" target="_blank"><i class="far fa-file-code"></i></a>
+          <a href="https://sam-joyce.github.io/minesweeper/" target="_blank"><i class="fab fa-chrome"></i></a>
         </div>
       </article>
       <article id="p4">
@@ -217,8 +219,8 @@
           <h3>NASA API</h3>
           <p>A relatively small app created in Week 11 of the nology course. Pulling from 'Insight: Mars Weather Service API' it display the min and max temperatures for the last 7 days on Mars.</p>
           <p>HTML | CSS/SCSS | JavaScript | API's</p>
-          <a href="https://github.com/sam-joyce/NASA-API" target="_blank><i class="far fa-file-code"></i></a>
-          <a href="https://sam-joyce.github.io/NASA-API/" target="_blank><i class="fab fa-chrome"></i></a>
+          <a href="https://github.com/sam-joyce/NASA-API" target="_blank"><i class="far fa-file-code"></i></a>
+          <a href="https://sam-joyce.github.io/NASA-API/" target="_blank"><i class="fab fa-chrome"></i></a>
         </div>
       </article>
       <article id="p5">
@@ -226,8 +228,8 @@
           <h3>The Drop</h3>
           <p>Completed from weeks 6-10 of the nology course ths was my cohorts client project. I was the project manager for 1 f the 4 weeks and completed tickets including user-authentication and drafting a new artist release.</p>
           <p>HTML | CSS/SCSS | JavaScript | React | Working in a team | Project Management/Planning | Agile | API's | Firestore | TDD</p>
-          <a href="https://github.com/nology-tech/the-drop-x-nology" target="_blank><i class="far fa-file-code"></i></a>
-          <a href="https://the-drop-x-nology.firebaseapp.com/" target="_blank><i class="fab fa-chrome"></i></a>
+          <a href="https://github.com/nology-tech/the-drop-x-nology" target="_blank"><i class="far fa-file-code"></i></a>
+          <a href="https://the-drop-x-nology.firebaseapp.com/" target="_blank"><i class="fab fa-chrome"></i></a>
         </div>
       </article>
       <article id="p6">
@@ -235,13 +237,14 @@
           <h3>Rock Paper Scissors</h3>
           <p>Produced in week 3 of the nology course, this is the first game built in JavaScript ad allows the user to play against a computer whose choice is decided using a randomising JS function.</p>
           <p>HTML | CSS/SCSS | JavaScript</p>
-          <a href="https://github.com/sam-joyce/rock-paper-scissors" target="_blank><i class="far fa-file-code"></i></a>
-          <a href="https://sam-joyce.github.io/rock-paper-scissors/" target="_blank><i class="fab fa-chrome"></i></a>
+          <a href="https://github.com/sam-joyce/rock-paper-scissors" target="_blank"><i class="far fa-file-code"></i></a>
+          <a href="https://sam-joyce.github.io/rock-paper-scissors/" target="_blank"><i class="fab fa-chrome"></i></a>
         </div>
       </article>
     </div>
-
   </section>
+
+  <!-- MY YOUTUBE -->
 
   <section class="youtube" id="YT">
     <div class="YT-title">
@@ -251,28 +254,29 @@
 
     <div class="box-around">
       <div class="item">
-        <a href="" target="_blank><i class="fab fa-youtube"></i></a>
+        <a href="https://www.youtube.com/channel/UCe0A51Cg9em64q4k_6NzdcQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
         <h4>Week 1</h4>
         <p>In the first week of the course we learn about using GitHub, git, HTML and CSS.</p>
       </div>
       <div class="item">
-        <a href="" target="_blank><i class="fab fa-youtube"></i></a>
+        <a href="https://www.youtube.com/channel/UCe0A51Cg9em64q4k_6NzdcQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
         <h4>Week 2</h4>
         <p>We learnt about CSS best preactice, flex and grid as well as SCSS for cleaner styling.</p>
       </div>
       <div class="item">
-        <a href="" target="_blank><i class="fab fa-youtube"></i></a>
+        <a href="https://www.youtube.com/channel/UCe0A51Cg9em64q4k_6NzdcQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
         <h4>Week 3</h4>
         <p>We were introduced to Javascript and began working with 'ifs' and 'loops'.</p>
       </div>
       <div class="item">
-        <a href="" target="_blank><i class="fab fa-youtube"></i></a>
+        <a href="https://www.youtube.com/channel/UCe0A51Cg9em64q4k_6NzdcQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
         <h4>Week 4</h4>
         <p>This week we had a break from coding and learnt all about soft skills.</p>
       </div>
     </div>
-
   </section>
+
+  <!-- MY CONTACT -->
 
   <section class="contact" id="call-me">
     <div class="contact-title">
@@ -283,16 +287,17 @@
     <div class="email-link">
       <a href="mailto:samjoyce18@yahoo.com"><i class="far fa-envelope"></i></a>
     </div>
-
   </section>
+
+  <!-- MY SOCIALS -->
 
   <footer>
     <section class="socials">
-      <a href="linkedin.com/in/sam-joyce-att" target="_blank><i class="fab fa-linkedin-in"></i></a>
-      <a href="https://github.com/sam-joyce" target="_blank><i class="fab fa-github"></i></a>
-      <a href="https://www.youtube.com/channel/UCe0A51Cg9em64q4k_6NzdcQ?view_as=subscriber" target="_blank><i
+      <a href="linkedin.com/in/sam-joyce-att" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+      <a href="https://github.com/sam-joyce" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.youtube.com/channel/UCe0A51Cg9em64q4k_6NzdcQ?view_as=subscriber" target="_blank"><i
           class="fab fa-youtube"></i></a>
-      <a href="https://www.instagram.com/sam_ozanam/?hl=en"><i class="fab fa-instagram" target="_blank></i></a>
+      <a href="https://www.instagram.com/sam_ozanam/?hl=en"><i class="fab fa-instagram" target="_blank"></i></a>
     </section>
   </footer>
 
