minor styling on The Drop project div corrected

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       <article id="p5">
         <div class=project-boxes class="box5">
           <h3>The Drop</h3>
-          <p>Completed from weeks 6-10 of the nology course ths was my cohorts client project. I was the project manager for 1 f the 4 weeks and completed tickets including user-authentication and drafting a new artist release.</p>
+          <p>Completed from weeks 6-10 of the nology course ths was my cohorts client project. I was the project manager for 1 of the 4 weeks and personally completed user-authentication with email.</p>
           <p>HTML | CSS/SCSS | JavaScript | React | Working in a team | Project Management/Planning | Agile | API's | Firestore | TDD</p>
           <a href="https://github.com/nology-tech/the-drop-x-nology" target="_blank"><i class="far fa-file-code"></i></a>
           <a href="https://the-drop-x-nology.firebaseapp.com/" target="_blank"><i class="fab fa-chrome"></i></a>
