typos fixed - YT video descriptions updated - Home link on navbar updated

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
   <!--  LANDING PAGE -->
-  <section class="page1">
+  <section class="page1" id="home">
     <div class="intro">
       <h1>Sam Joyce <span class="seperator">|</span> Software Developer <span class="seperator">|</span> London</h1>
       <p>scroll down to see my background and projects, or click <span class="cv"><a href="/images/Final CV (portfolio).jpg" download="Samuel Joyce CV">here</a></span> to
@@ -32,8 +32,8 @@
       <span></span>
       <span></span>
       <span></span>
-
     </div>
+
   </section>
   <!--  NAV BAR -->
   <nav id="navvv" class="navbar navbar-expand-lg navbar-light bg-light">
@@ -45,7 +45,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="#home">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#about-me">About</a>
@@ -217,7 +217,7 @@
       <article id="p4">
         <div class=project-boxes>
           <h3>NASA API</h3>
-          <p>A relatively small app created in Week 11 of the nology course. Pulling from 'Insight: Mars Weather Service API' it display the min and max temperatures for the last 7 days on Mars.</p>
+          <p>A relatively small app created in Week 11 of the nology course. Pulling from 'Insight: Mars Weather Service API' it displays the min and max temperatures for the last 7 days on Mars.</p>
           <p>HTML | CSS/SCSS | JavaScript | API's</p>
           <a href="https://github.com/sam-joyce/NASA-API" target="_blank"><i class="far fa-file-code"></i></a>
           <a href="https://sam-joyce.github.io/NASA-API/" target="_blank"><i class="fab fa-chrome"></i></a>
@@ -235,7 +235,7 @@
       <article id="p6">
         <div class=project-boxes>
           <h3>Rock Paper Scissors</h3>
-          <p>Produced in week 3 of the nology course, this is the first game built in JavaScript ad allows the user to play against a computer whose choice is decided using a randomising JS function.</p>
+          <p>Produced in week 3 of the nology course, this is the first game built in JavaScript and allows the user to play against a computer whose choice is decided using a randomised JS function.</p>
           <p>HTML | CSS/SCSS | JavaScript</p>
           <a href="https://github.com/sam-joyce/rock-paper-scissors" target="_blank"><i class="far fa-file-code"></i></a>
           <a href="https://sam-joyce.github.io/rock-paper-scissors/" target="_blank"><i class="fab fa-chrome"></i></a>
@@ -250,28 +250,28 @@
     <div class="YT-title">
       <h1>YouTube</h1>
     </div>
-    <p id="YT-intro">I completed a series of YouTube videos documenting my journey to becoming a developer in 12 weeks, which can be found below...</p>
+    <p id="YT-intro">I completed a series of YouTube videos documenting my journey to becoming a developer in 12 weeks. Follow along below...</p>
 
     <div class="box-around">
       <div class="item">
         <a href="https://www.youtube.com/channel/UCe0A51Cg9em64q4k_6NzdcQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
         <h4>Week 1</h4>
-        <p>In the first week of the course we learn about using GitHub, git, HTML and CSS.</p>
+        <p>GitHub, git, HTML and CSS.</p>
       </div>
       <div class="item">
         <a href="https://www.youtube.com/channel/UCe0A51Cg9em64q4k_6NzdcQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
         <h4>Week 2</h4>
-        <p>We learnt about CSS best preactice, flex and grid as well as SCSS for cleaner styling.</p>
+        <p>CSS best practice, flex and grid, as well as SCSS for cleaner styling.</p>
       </div>
       <div class="item">
         <a href="https://www.youtube.com/channel/UCe0A51Cg9em64q4k_6NzdcQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
         <h4>Week 3</h4>
-        <p>We were introduced to Javascript and began working with 'ifs' and 'loops'.</p>
+        <p>Javascript (introduced to 'ifs' and 'loops').</p>
       </div>
       <div class="item">
         <a href="https://www.youtube.com/channel/UCe0A51Cg9em64q4k_6NzdcQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
         <h4>Week 4</h4>
-        <p>This week we had a break from coding and learnt all about soft skills.</p>
+        <p>A break from coding?! This week... soft skills.</p>
       </div>
     </div>
   </section>
